--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "@aws-amplify/ui-react/styles.css";
+/* 
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -39,4 +41,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
